ws: Fix top-level window placement and touch gesture handling.

This fixes most known Keyboard Shortcut Viewer app touch defects:

Only target the root when touch events are outside the associated display.
(in clients, root windows are top-level app windows, not display-sized roots)

Fix placement of top-level client app windows by using screen coordinates.
(use ScreenPositionClient and screen bounds for top-levels; add test)

Use GetDisplayForNewWindows in CreateInitParamsForTopLevel.
(place window service top-level windows on the correct display)

TODO: Fix capture release from EditingHandleView gesture event handling.
(it continues consuming events even after touch drag/scroll release)

Bug: 867559
Test: KSV (Ctrl-Alt-/) window placement and touch interaction. No regression of bezel touch gestures, etc.
Change-Id: I4fabcb9ac787743b1e80ec54e615bd5443e580d8
Reviewed-on: https://chromium-review.googlesource.com/1152102
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581760}
Former-commit-id: 5613aca3bca8598bc814598bb8c90ddc5cd001b1